kubernetes/heimdall/deployments.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: heimdall
  labels:
    app: heimdall

spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      containers:
        - name: heimdall
          image: ghcr.io/linuxserver/heimdall:latest
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: volume
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: pvc-heimdall
