kubernetes/heimdall/02-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  labels:
    app: heimdall

spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: heimdall
