kubernetes/heimdall/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: heimdall
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: heimdall
