kubernetes/heimdall/ingressroutes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: heimdall-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`hm.${HOMELAB_DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: heimdall
          port: 80
      middlewares:
        - name: https-redirect
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: heimdall-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hm.${HOMELAB_DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: heimdall
          port: 80
      middlewares:
        - name: forward-auth
  tls:
    certResolver: default
